# OpenCv-Plus-Unity

./: .gitattributes  .gitignore  CMakeCache.txt  README.md  result.txt
.github/workflows/: buildPlugin.yml
Utils/: build-all-platforms.sh  build-everything.sh  make-binary-symlinks.sh
Utils/Versions/: 2.1.txt  3.0.txt  4.3.txt
Utils/scripts/: build-library.sh  build-plugin.sh
Utils/toolchains/: toolchain.android.cmake
source/sharpextern-1.1/: CMakeLists.txt  core.cpp  core.h  core_FileStorage.h  core_Mat.h  imgproc.cpp  imgproc.h  imgproc_Subdiv2D.h  include_opencv.h  my_functions.h  my_types.h  objdetect.cpp  objdetect_HOGDescriptor.h  objdetect_QRCodeDetector.h  std_vector.h
source/sharpextern-4.3.0/: CMakeLists.txt  include_opencv.h  std_vector.h
source/sharpextern-4.7.0/: CMakeLists.txt  include_opencv.h  std_vector.h
source/unity/documentation/: OfficialDocumentation.md  OpenCV+Unity_Notes.txt
